[flake8]
show-source = True
max-line-length = 100


[metadata]
author = Randy Barlow
author_email = randy@electronsweatshop.com
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
license = GPLv3
name = broker


[mypy-quart.*]
ignore_missing_imports = True
